# renta-calculator

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  pyproject.toml
.claude/: settings.json
.github/workflows/: publish.yml  test.yml
samples/output/: example_report.html
scripts/: generate_sample_pdfs.py
src/renta/: __main__.py  calculator.py  cli.py  exchange.py  formatting.py  models.py  report.css  report.py
src/renta/parsers/: __init__.py  degiro.py  fidelity.py  koinly.py  koinly_spain.py
src/renta/templates/: _airdrops_crypto.html  _dividendos.html  _ganancias_crypto.html  _macros.html  _rendimientos_crypto.html  _resumen.html  _retenciones.html  _tipos_cambio.html  _ventas_acciones.html  report.html
tests/: conftest.py  factories.py  test_calculator.py  test_cli.py  test_degiro.py  test_exchange.py  test_fidelity.py  test_formatting.py  test_koinly.py  test_koinly_spain.py  test_report.py  test_source_ref.py
