[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "renta-calculator"
version = "0.1.0"
description = "Calculadora de casillas del modelo 100 a partir de PDFs de brokers"
authors = [{name = "jelies"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "pdfplumber>=0.10",
    "requests>=2.31",
    "Jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/jelies/renta-calculator"
Issues = "https://github.com/jelies/renta-calculator/issues"

[project.scripts]
renta-calculator = "renta.cli:main"

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov>=5.0"]
dev = ["fpdf2>=2.8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/renta"]
